[package]
name = "gitlab-ext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.12.4"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.117"
thiserror = "1.0.60"
serde = { version = "1.0.201", features = ["derive"] }
chrono = "0.4.38"

